Add 1-2 about java9 introduction